# models/Cart.js
@@ -1,4 +1,5 @@
 const sql = require('../db');
+const { get } = require('../routes/userRoutes');
 
 //Create cart
 async function createCart(userId) {
@@ -27,36 +28,61 @@ async function addItemToCart(cartId, productData, quantity, rentTime) {
     const metadata = {
         product_name: name,
     }
-    const newItem = await sql`
-    INSERT INTO "CartItem" (
-        cart_id,
-        product_id,
-        unit_price,
-        quantity,
-        metadata,
-        rent_time,
-        total_price
-    )
-    VALUES (
-        ${cartId},
-        ${productId},
-        ${finalPrice},
-        ${quantity},
-        ${sql.json(metadata)},
-        ${rentTime},
-        ${totalPrice}
-    )
-    RETURNING *
-    `;
-    return newItem[0];
+
+    // Use transaction to ensure data integrity
+    const new_item = await sql.begin(async sql => {
+        
+        const insertedItems = await sql`
+            INSERT INTO "CartItem" (
+                cart_id, product_id, unit_price, quantity,
+                metadata, rent_time, total_price
+            )
+            VALUES (
+                ${cartId}, ${productId}, ${finalPrice}, ${quantity},
+                ${sql.json(metadata)}, ${rentTime}, ${totalPrice}
+            )
+            RETURNING *
+        `;
+        
+        
+        const item = insertedItems[0]; 
+
+        
+        await sql`
+            UPDATE "Cart"
+            SET
+                updated_at = NOW(),
+                total_amount = total_amount + ${item.total_price},
+                total_quantity = total_quantity + ${item.quantity},
+                "order" = "order" + 1
+            WHERE
+                id = ${cartId}
+        `;
+        return item;
+    });
+    return new_item;
 }
 
 // Delete cart item
-async function deleteCartItem(cartItemId, cartId) {
-    await sql`
-    DELETE FROM "CartItem"
-    WHERE id = ${cartItemId} AND cart_id = ${cartId}
-    `;
+async function deleteCartItem(cartItemId, cartId, cartItem) {
+
+    await sql.begin(async sql => {
+        await sql`
+            DELETE FROM "CartItem"
+            WHERE id = ${cartItemId} AND cart_id = ${cartId}
+        `;
+    
+        await sql`
+            UPDATE "Cart"
+            SET
+                updated_at = NOW(),
+                total_amount = total_amount - ${cartItem.total_price},
+                total_quantity = total_quantity - ${cartItem.quantity},
+                "order" = "order" - 1
+            WHERE
+                id = ${cartId}
+        `;
+    })
 }
 
 // Get cart items
